bump up memory used by the builder
git-svn-id: https://svn.codehaus.org/groovy/eclipse/trunk@23167 a5544e8c-8a19-0410-ba12-f9af4593a198