@@ -57,7 +57,9 @@
 			<jvmarg value="-Dversion.full=${version.full}"/>
 			<jvmarg value="-Dversion.qualifier=${forceContextQualifier}"/>
 			<jvmarg value="-DforceContextQualifier=${forceContextQualifier}"/>
-  	
+  		<jvmarg value="-Xmx768M"/>
+  		<jvmarg value="-XX:PermSize=64M"/>
+  		<jvmarg value="-XX:MaxPermSize=256M "/>
 		 	<classpath>
     		<fileset dir="${eclipseDir}/plugins">
   	   		<include name="org.eclipse.equinox.launcher_*.jar"/>
